--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
       }
       #contact {
         font-size: 15px;
+        text-decoration: none;
       }
     </style>
     <div id="header">
@@ -203,16 +204,17 @@
     </div>
     <div class="project">
       <h1>Contact</h1>
-      <p id="contact">
+      <a id="contact" href="mailto:sivarajpauldurai@gmail.com">
         <i class="fa-solid fa-envelope"></i>&nbsp; Sivarajpauldurai@gmail.com
-      </p>
-      <p id="contact">
+      </a>
+      <a id="contact" href="www.linkedin.com/in/
+sivarajpaldurai">
         <i class="fa-brands fa-linkedin"></i>&nbsp;
         inkedin.com/in/sivaraj-p-87ba59265
-      </p>
-      <p id="contact">
+      </a>
+      <a id="contact" href="https://github.com/Sivaraj-P">
         <i class="fa-brands fa-github"></i>&nbsp; github.com/Sivaraj-P
-      </p>
+      </a>
     </div>
   </body>
 </html>
