--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <a id="contact" href="www.linkedin.com/in/
 sivarajpaldurai">
         <i class="fa-brands fa-linkedin"></i>&nbsp;
-        inkedin.com/in/sivaraj-p-87ba59265
+        inkedin.com/in/sivarajpaldurai
       </a>
       <a id="contact" href="https://github.com/Sivaraj-P">
         <i class="fa-brands fa-github"></i>&nbsp; github.com/Sivaraj-P
