--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
       <h1>Contact</h1>
       <a id="contact" href="mailto:sivarajpauldurai@gmail.com">
         <i class="fa-solid fa-envelope"></i>&nbsp; Sivarajpauldurai@gmail.com
-      </a>
+      </a></br>
       <a id="contact" href="www.linkedin.com/in/
-sivarajpaldurai">
+sivarajpaldurai" target="_blank">
         <i class="fa-brands fa-linkedin"></i>&nbsp;
         inkedin.com/in/sivarajpaldurai
-      </a>
+      </a></br>
       <a id="contact" href="https://github.com/Sivaraj-P">
         <i class="fa-brands fa-github"></i>&nbsp; github.com/Sivaraj-P
-      </a>
+      </a></br>
     </div>
   </body>
 </html>
