--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
       <a id="contact" href="mailto:sivarajpauldurai@gmail.com">
         <i class="fa-solid fa-envelope"></i>&nbsp; Sivarajpauldurai@gmail.com
       </a></br>
-      <a id="contact" href="www.linkedin.com/in/
+      <a id="contact" href="https://linkedin.com/in/
 sivarajpaldurai" target="_blank">
         <i class="fa-brands fa-linkedin"></i>&nbsp;
-        inkedin.com/in/sivarajpaldurai
+        linkedin.com/in/sivarajpaldurai
       </a></br>
       <a id="contact" href="https://github.com/Sivaraj-P">
         <i class="fa-brands fa-github"></i>&nbsp; github.com/Sivaraj-P
